[package]
name = "db-map-test"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Mundar <thomas@mundar.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mundar/db-map"
keywords = ["DBMap", "testing", "db-map"]
categories = ["database-implementations"]
description = "The test suite for implementations for the DBKey trait"

[dependencies]
db-key-macro = "0.1.1"
db-map-trait = { path = "../db-map-trait" }
proptest = "1.5.0"

[dev-dependencies]
db-map-btreemap = { path = "../db-map-btreemap" }
db-map-lmdb = { path = "../db-map-lmdb" }
